@@ -1,9 +1,9 @@
 #ifndef LIBPORT_SEMAPHORE_HH
 # define LIBPORT_SEMAPHORE_HH
 
+# include "libport/windows.hh"
+
 # if defined WIN32 || defined LIBPORT_WIN32
-#  define _WIN32_WINNT 0x0400
-#  include <windows.h>
 
 namespace urbi
 {
