@@ -4,10 +4,7 @@
 # if defined WIN32 || defined LIBPORT_WIN32
 
 #  include <iostream>
-#  ifndef _WIN32_WINNT
-#   define _WIN32_WINNT 0x0400
-#  endif
-#  include <windows.h>
+#  include "libport/windows.hh"
 
 namespace urbi
 {
