@@ -1,3 +1,10 @@
+2006-12-05  Akim Demaille  <demaille@gostai.com>
+
+	libport/windows.hh
+	* windows.hh: New.
+	* README, libport.mk, semaphore.hh, thread.hh, utime.hh:
+	Adjust.
+
 2006-12-05  Akim Demaille  <akim.demaille@free.fr>
 
 	Restyle
